app/assets/stylesheets/jumpstart.css
.navbar {
  height: 5rem;
  min-height: 5rem;
}

.navbar-form {
  padding: 0;
  padding-right: 8px;
  margin-left: 0;
  margin-top: 12px;
}

.navbar-container-override {
  margin: 0px;
  padding: 0px;
}
.form-control {
  border-radius: 3px;
}

.navbar-default {
  background-color: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  background-image: none;
  box-shadow: none;
}

.nav > li > a {
  padding-left: 8px;
  padding-right: 8px;
  font-weight: 600;
  font-size: 13px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

img {
  border-radius: 3px;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
  color: #4078C0;
}
.navbar-default .navbar-nav > li > a {
  color: #000000;
}

.dropdown-logged-in-notice {
  color: #767676;
  padding-left: 20px;
}

.dropdown-menu {
  width: 180px;
}

.navbar-nav > li > .dropdown-menu {
  border-radius: 3px;
}

.left {
  float: left;
}

.right {
  float: right;
}

.custom-container.main {
  margin-left: 146px;
  margin-right: 141px;
}

.avatar {
  border-radius: 6px;
  padding-top: 1em !important;
  padding-bottom: 0 !important;
}

div.col-md-3.left {
  padding-left: 0;
}

.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
  border-left: none;
  border-top: none;
  border-right: none;
  border-bottom: 2px solid #c9510c;
}

.nav-tabs{
  display: flex;
  justify-content: center;
}

.span-tabs {
  font-size: 25px;
  display: inline-block;
  margin-right: 10px;
  padding: 15px;
}


/*footer*/
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

/*landing page*/

.carousel {
     margin-bottom: 60px;
   }

   .carousel .container {
     position: relative;
     z-index: 9;
   }

   .carousel-control {
     font-size: 120px;
     text-shadow: 0 1px 1px rgba(0,0,0,.4);
     z-index: 10;     
   }

   .carousel .item {
     height: 500px;
   }
   .carousel img {
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
     height: 500px;
   }

   .carousel-caption {
     background-color: transparent;
     position: static;
     max-width: 550px;
     padding: 0 0px;
     margin-top: 200px;
   }
   .carousel-caption h1,
   .carousel-caption .lead {
     margin: 0;
     line-height: 1.25;
     color: #fff;
     text-shadow: 0 1px 1px rgba(0,0,0,.4);
   }
   .carousel-caption .btn {
     margin-top: 10px;
   }

 .account-img {
   margin-top: 65px;
   display: flex;
   justify-content: center;
 }


/*css for featured project*/

.featured {
  color: grey;
   width: 55%;
   text-align: center;
   border-bottom: 1px solid grey;
   line-height: 0.1em;
   margin: 10px 0 20px;
}


.featured span {
    background:#fff;
    padding:0 10px;
    padding-bottom: 10px;

}

.img-center {
	margin: 0 auto;
}

.no-padding {
  margin: 0;

}


/*for login/sign up*/
@import url(https://fonts.googleapis.com/css?family=Roboto:300);

.login-page {
  width: 360px;
  padding: 8% 0 0;
  margin: auto;
}
.form {
  position: relative;
  z-index: 1;
  background: #FFFFFF;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
  text-align: center;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}
.form input {
  font-family: "Roboto", sans-serif;
  outline: 0;
  background: #f2f2f2;
  width: 100%;
  border: 0;
  margin: 0 0 15px;
  padding: 15px;
  box-sizing: border-box;
  font-size: 14px;
}
.form button {
  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  outline: 0;
  background: #4CAF50;
  width: 100%;
  border: 0;
  padding: 15px;
  color: #FFFFFF;
  font-size: 14px;
  -webkit-transition: all 0.3 ease;
  transition: all 0.3 ease;
  cursor: pointer;
}
.form button:hover,.form button:active,.form button:focus {
  background: #43A047;
}
.form .message {
  margin: 15px 0 0;
  color: #b3b3b3;
  font-size: 12px;
}
.form .message a {
  color: #4CAF50;
  text-decoration: none;
}
.form .register-form {
  display: none;
}

